--- a/404.html
+++ b/404.html
@@ -191,7 +191,7 @@
 
     </div>
     <div class="widget qrcode">
-    <img src="https://blog.tianyulab.com/public/qrcode.png" alt="qrcode" width="172px" height="172px"/>
+    <img src="https://blog.tianyulab.com/public/qrcode.jpg" alt="qrcode" width="172px" height="172px"/>
     <p> 天御实验室<br/> 威胁感知、威胁猎杀 <br /></p>
 </div>
 
